ontol-compiler/test-cases/error/map/attribute_mismatch.on
def foo ()
def bar ()
rel foo 'prop0': bar
rel foo 'prop1': bar
rel foo 'prop2': bar
rel bar is: i64
map (
    foo(x),
    bar() // ERROR expected attribute
)
